fixing background image to not get cropped off

--- a/frontend/css/shoestring/0.0.1/shoestring-dev.css
+++ b/frontend/css/shoestring/0.0.1/shoestring-dev.css
@@ -331,7 +331,7 @@ body {
 
 /* line 29, ../../../sass/shoestring/main.sass */
 .column {
-  background: url(http://winningateverything.com/files/2011/06/jake2.jpg) no-repeat center center fixed; }
+  background: url(http://winningateverything.com/files/2011/06/jake2.jpg) no-repeat center fixed; }
 
 /* line 33, ../../../sass/shoestring/main.sass */
 header {
@@ -340,80 +340,80 @@ header {
 
 /* line 37, ../../../sass/shoestring/main.sass */
 .column {
-  background-color: white;
+  background-color: #0f0f0f;
   position: absolute;
-  min-height: 80%;
+  min-height: 100%;
   min-width: 100%;
-  background-size: 65%; }
+  background-size: 50%; }
 
-/* line 45, ../../../sass/shoestring/main.sass */
+/* line 44, ../../../sass/shoestring/main.sass */
 .submit {
   float: right;
   vertical-align: middle; }
 
-/* line 49, ../../../sass/shoestring/main.sass */
+/* line 48, ../../../sass/shoestring/main.sass */
 .logo {
   color: white;
   font-size: 1.5em;
   padding-top: 0.175em;
   text-align: center; }
 
-/* line 55, ../../../sass/shoestring/main.sass */
+/* line 54, ../../../sass/shoestring/main.sass */
 .g-mode {
   background-position: -602.00002px -412.00002px;
   width: 35px;
   height: 25px; }
 
-/* line 70, ../../../sass/shoestring/main.sass */
+/* line 69, ../../../sass/shoestring/main.sass */
 #like {
   background-position: -1162.00008px -601.00002px;
   width: 69px;
   height: 100px; }
 
 @media (min-width: 40rem) {
-  /* line 77, ../../../sass/shoestring/main.sass */
+  /* line 76, ../../../sass/shoestring/main.sass */
   header {
     height: 2.8em; }
 
-  /* line 80, ../../../sass/shoestring/main.sass */
+  /* line 79, ../../../sass/shoestring/main.sass */
   .submit {
     padding-top: 0.3em; }
 
-  /* line 83, ../../../sass/shoestring/main.sass */
+  /* line 82, ../../../sass/shoestring/main.sass */
   .logo {
     font-size: 2em; }
 
-  /* line 86, ../../../sass/shoestring/main.sass */
+  /* line 85, ../../../sass/shoestring/main.sass */
   .g-mode {
     background-position: -683.00002px -410.00002px;
     width: 50px;
     height: 36px; }
 
-  /* line 101, ../../../sass/shoestring/main.sass */
+  /* line 100, ../../../sass/shoestring/main.sass */
   #like {
     background-position: -891.00008px -529.00002px;
     width: 121px;
     height: 176px; } }
 @media (min-width: 64rem) {
-  /* line 109, ../../../sass/shoestring/main.sass */
+  /* line 108, ../../../sass/shoestring/main.sass */
   header {
     height: 3.6em; }
 
-  /* line 112, ../../../sass/shoestring/main.sass */
+  /* line 111, ../../../sass/shoestring/main.sass */
   .submit {
     padding-top: 0.75em; }
 
-  /* line 115, ../../../sass/shoestring/main.sass */
+  /* line 114, ../../../sass/shoestring/main.sass */
   .g-mode {
     background-position: -771.00002px -406.00002px;
     width: 75px;
     height: 54px; }
 
-  /* line 120, ../../../sass/shoestring/main.sass */
+  /* line 119, ../../../sass/shoestring/main.sass */
   .logo {
     font-size: 2.5em; }
 
-  /* line 133, ../../../sass/shoestring/main.sass */
+  /* line 132, ../../../sass/shoestring/main.sass */
   #like {
     background-position: -538.00002px -470.00002px;
     width: 162px;
