--- a/frontend/sass/shoestring/main.sass
+++ b/frontend/sass/shoestring/main.sass
@@ -35,12 +35,11 @@ header
   height: 2.3em
 
 .column
-  // background: $current-meme
-  background-color: white
+  background-color: #0f0f0f
   position: absolute
-  min-height: 80%
+  min-height: 100%
   min-width: 100%
-  background-size: 65%
+  background-size: 50%
 
 .submit
   float: right
