--- a/frontend/sass/shoestring/vars.sass
+++ b/frontend/sass/shoestring/vars.sass
@@ -7,5 +7,5 @@ $off-white: #EFE9E9
 $my-margins: 10px 15px 0 0
 $map: (key1: value1, key2: value2, key3: value3)
 
-$current-meme: url(http://winningateverything.com/files/2011/06/jake2.jpg) no-repeat center center fixed
+$current-meme: url(http://winningateverything.com/files/2011/06/jake2.jpg) no-repeat center fixed
 
